Created page with "===Standardní menu==="

--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -28,8 +28,9 @@
 </p>
 <h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
 <p>V&#283;t&scaron;ina n&aacute;stroj&#367; &bdquo;Std Base&ldquo; je p&#345;&iacute;stupn&aacute; ze <a href="../Standard_Menu.html" title="Standard Menu">standardn&iacute;ho menu</a>. N&aacute;stroje, kter&eacute; jsou dostupn&eacute; pouze z panelu n&aacute;stroj&#367; nebo kontextov&eacute;ho menu, jsou uvedeny n&iacute;&#382;e v sekc&iacute;ch <a href="#Structure_toolbar">Panel n&aacute;stroj&#367; struktury</a> a <a href="#Additional_tools">Dal&scaron;&iacute; n&aacute;stroje</a>.
+</p><p><span id="Standard_menu"></span>
 </p>
-<h3><span class="mw-headline" id="Standard_menu">Standard menu</span></h3>
+<h3><span id="Standardn.C3.AD_menu"></span><span class="mw-headline" id="Standardn&iacute;_menu">Standardn&iacute; menu</span></h3>
 <p>The standard menu is composed of 7 sub-menus. Each sub-menu has a dedicated page. Just click on any of the names below.
 </p><p><span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;">
 <a href="../Std_File_Menu.html" title="Std File Menu">File</a>
@@ -145,13 +146,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090349
+Cached time: 20260118090402
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.185 seconds
-Real time usage: 0.300 seconds
-Preprocessor visited node count: 546/1000000
+CPU time usage: 0.149 seconds
+Real time usage: 0.218 seconds
+Preprocessor visited node count: 547/1000000
 Post&#8208;expand include size: 29096/2097152 bytes
 Template argument size: 11637/2097152 bytes
 Highest expansion depth: 5/100
@@ -161,18 +162,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.235      1 -total
- 48.31%   22.337      1 Template:Std_Base_navi/cs
- 32.83%   15.179      2 Template:Navigation_menu_2
- 18.21%    8.420      1 Template:Userdocnavi/cs
-  9.30%    4.299      6 Template:VersionPlus
-  7.85%    3.631      8 Template:Version
-  6.37%    2.944      2 Template:Docnav
-  4.78%    2.210      1 Template:StdMenu
-  2.17%    1.002      1 Template:TOCright
+100.00%   30.199      1 -total
+ 40.01%   12.083      1 Template:Std_Base_navi/cs
+ 25.94%    7.833      2 Template:Navigation_menu_2
+ 25.48%    7.696      1 Template:Userdocnavi/cs
+  7.66%    2.312      1 Template:StdMenu
+  7.22%    2.180      2 Template:Docnav
+  6.01%    1.814      8 Template:Version
+  5.42%    1.638      6 Template:VersionPlus
+  4.07%    1.228      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090349 and revision id 1739977. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090402 and revision id 1739979. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
