--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -31,7 +31,7 @@
 </p><p><span id="Standard_menu"></span>
 </p>
 <h3><span id="Standardn.C3.AD_menu"></span><span class="mw-headline" id="Standardn&iacute;_menu">Standardn&iacute; menu</span></h3>
-<p>The standard menu is composed of 7 sub-menus. Each sub-menu has a dedicated page. Just click on any of the names below.
+<p>Standardn&iacute; menu se skl&aacute;d&aacute; ze 7 podmenu. Ka&#382;d&eacute; podmenu m&aacute; svou vlastn&iacute; str&aacute;nku. Sta&#269;&iacute; kliknout na n&#283;kter&yacute; z n&iacute;&#382;e uveden&yacute;ch n&aacute;zv&#367;.
 </p><p><span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;">
 <a href="../Std_File_Menu.html" title="Std File Menu">File</a>
 &nbsp;&nbsp;&nbsp;
@@ -146,12 +146,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090402
+Cached time: 20260118090438
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.218 seconds
+CPU time usage: 0.178 seconds
+Real time usage: 0.280 seconds
 Preprocessor visited node count: 547/1000000
 Post&#8208;expand include size: 29096/2097152 bytes
 Template argument size: 11637/2097152 bytes
@@ -162,18 +162,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.199      1 -total
- 40.01%   12.083      1 Template:Std_Base_navi/cs
- 25.94%    7.833      2 Template:Navigation_menu_2
- 25.48%    7.696      1 Template:Userdocnavi/cs
-  7.66%    2.312      1 Template:StdMenu
-  7.22%    2.180      2 Template:Docnav
-  6.01%    1.814      8 Template:Version
-  5.42%    1.638      6 Template:VersionPlus
-  4.07%    1.228      1 Template:TOCright
+100.00%   27.630      1 -total
+ 44.90%   12.406      1 Template:Std_Base_navi/cs
+ 31.46%    8.692      2 Template:Navigation_menu_2
+ 15.09%    4.170      1 Template:Userdocnavi/cs
+  9.52%    2.631      2 Template:Docnav
+  7.09%    1.959      1 Template:StdMenu
+  6.59%    1.822      6 Template:VersionPlus
+  5.95%    1.644      8 Template:Version
+  4.86%    1.344      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090402 and revision id 1739979. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090438 and revision id 1739981. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
