Created page with "<!--Please keep info below synchronized with Std_Base, Standard_Menu, Std_File_Menu etc.--> {{StdMenu | [[Std_File_Menu|Soubor]] &nbsp;&nbsp;&nbsp; [[Std_Edit_Menu|Upravit]] &nbsp;&nbsp;&nbsp; [[Std_View_Menu|Zobrazit]] &nbsp;&nbsp;&nbsp; [[Std_Tools_Menu|Nástroje]] &nbsp;&nbsp;&nbsp; [[Std_Macro_Menu|Makro]] &nbsp;&nbsp;&nbsp; [[Std_Windows_Menu|Okna]] &nbsp;&nbsp;&nbsp; [[Std_Help_Menu|Nápověda]] }}"

--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -33,19 +33,19 @@
 <h3><span id="Standardn.C3.AD_menu"></span><span class="mw-headline" id="Standardn&iacute;_menu">Standardn&iacute; menu</span></h3>
 <p>Standardn&iacute; menu se skl&aacute;d&aacute; ze 7 podmenu. Ka&#382;d&eacute; podmenu m&aacute; svou vlastn&iacute; str&aacute;nku. Sta&#269;&iacute; kliknout na n&#283;kter&yacute; z n&iacute;&#382;e uveden&yacute;ch n&aacute;zv&#367;.
 </p><p><span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;">
-<a href="../Std_File_Menu.html" title="Std File Menu">File</a>
+<a href="../Std_File_Menu.html" title="Std File Menu">Soubor</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_Edit_Menu.html" title="Std Edit Menu">Edit</a>
+<a href="../Std_Edit_Menu.html" title="Std Edit Menu">Upravit</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_View_Menu.html" title="Std View Menu">View</a>
+<a href="../Std_View_Menu.html" title="Std View Menu">Zobrazit</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_Tools_Menu.html" title="Std Tools Menu">Tools</a>
+<a href="../Std_Tools_Menu.html" title="Std Tools Menu">N&aacute;stroje</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_Macro_Menu.html" title="Std Macro Menu">Macro</a>
+<a href="../Std_Macro_Menu.html" title="Std Macro Menu">Makro</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_Windows_Menu.html" title="Std Windows Menu">Windows</a>
+<a href="../Std_Windows_Menu.html" title="Std Windows Menu">Okna</a>
 &nbsp;&nbsp;&nbsp;
-<a href="../Std_Help_Menu.html" title="Std Help Menu">Help</a>
+<a href="../Std_Help_Menu.html" title="Std Help Menu">N&aacute;pov&#283;da</a>
 </span>
 </p>
 <h3><span class="mw-headline" id="Structure_toolbar">Structure toolbar</span></h3>
@@ -146,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090438
+Cached time: 20260118090659
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.178 seconds
-Real time usage: 0.280 seconds
+CPU time usage: 0.157 seconds
+Real time usage: 0.245 seconds
 Preprocessor visited node count: 547/1000000
-Post&#8208;expand include size: 29096/2097152 bytes
-Template argument size: 11637/2097152 bytes
+Post&#8208;expand include size: 29112/2097152 bytes
+Template argument size: 11653/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -162,18 +162,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.630      1 -total
- 44.90%   12.406      1 Template:Std_Base_navi/cs
- 31.46%    8.692      2 Template:Navigation_menu_2
- 15.09%    4.170      1 Template:Userdocnavi/cs
-  9.52%    2.631      2 Template:Docnav
-  7.09%    1.959      1 Template:StdMenu
-  6.59%    1.822      6 Template:VersionPlus
-  5.95%    1.644      8 Template:Version
-  4.86%    1.344      1 Template:TOCright
+100.00%   29.697      1 -total
+ 41.33%   12.274      1 Template:Std_Base_navi/cs
+ 25.80%    7.662      2 Template:Navigation_menu_2
+ 19.84%    5.892      1 Template:Userdocnavi/cs
+  7.93%    2.354      2 Template:Docnav
+  7.87%    2.338      1 Template:TOCright
+  7.23%    2.146      6 Template:VersionPlus
+  6.12%    1.816      1 Template:StdMenu
+  5.86%    1.740      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090438 and revision id 1739981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090659 and revision id 1739983. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
