--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -47,8 +47,9 @@
 &nbsp;&nbsp;&nbsp;
 <a href="../Std_Help_Menu.html" title="Std Help Menu">N&aacute;pov&#283;da</a>
 </span>
+</p><p><span id="Structure_toolbar"></span>
 </p>
-<h3><span class="mw-headline" id="Structure_toolbar">Structure toolbar</span></h3>
+<h3><span id="Panel_n.C3.A1stroj.C5.AF_Struktura"></span><span class="mw-headline" id="Panel_n&aacute;stroj&#367;_Struktura">Panel n&aacute;stroj&#367; Struktura</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">New Part</a>: Creates a new part and makes it active.</li></ul>
 <ul><li><span id="Part_Datums"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Datums: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CoordinateSystem.html" title="Part CoordinateSystem">Coordinate System</a>: Creates a coordinate system object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
@@ -146,13 +147,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090659
+Cached time: 20260118090830
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.245 seconds
-Preprocessor visited node count: 547/1000000
+CPU time usage: 0.165 seconds
+Real time usage: 0.237 seconds
+Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
 Highest expansion depth: 5/100
@@ -162,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.697      1 -total
- 41.33%   12.274      1 Template:Std_Base_navi/cs
- 25.80%    7.662      2 Template:Navigation_menu_2
- 19.84%    5.892      1 Template:Userdocnavi/cs
-  7.93%    2.354      2 Template:Docnav
-  7.87%    2.338      1 Template:TOCright
-  7.23%    2.146      6 Template:VersionPlus
-  6.12%    1.816      1 Template:StdMenu
-  5.86%    1.740      8 Template:Version
+100.00%   32.718      1 -total
+ 43.91%   14.368      1 Template:Std_Base_navi/cs
+ 29.09%    9.519      2 Template:Navigation_menu_2
+ 21.44%    7.016      1 Template:Userdocnavi/cs
+  8.00%    2.619      2 Template:Docnav
+  5.94%    1.945      1 Template:StdMenu
+  5.79%    1.895      6 Template:VersionPlus
+  5.64%    1.847      8 Template:Version
+  4.30%    1.406      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090659 and revision id 1739983. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090830 and revision id 1739985. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
