--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -51,7 +51,7 @@
 </p>
 <h3><span id="Panel_n.C3.A1stroj.C5.AF_Struktura"></span><span class="mw-headline" id="Panel_n&aacute;stroj&#367;_Struktura">Panel n&aacute;stroj&#367; Struktura</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Part.html" title="Std Part">Nov&yacute; d&iacute;l</a>: Vytvo&#345;&iacute; novou sou&#269;&aacute;st a aktivuje ji.</li></ul>
-<ul><li><span id="Part_Datums"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Datums: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></span></li></ul>
+<ul><li><span id="Part_Datums"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Sou&#345;adnice: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CoordinateSystem.html" title="Part CoordinateSystem">Coordinate System</a>: Creates a coordinate system object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPlane.svg&amp;filetimestamp=20250110092548&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPlane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPlane.html" title="Part DatumPlane">Datum Plane</a>: Creates a datum plane object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumLine.svg&amp;filetimestamp=20250110092517&amp;.html" class="mw-file-description"><img src="../File/Part_DatumLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumLine.html" title="Part DatumLine">Datum Line</a>: Creates a datum line object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118091125
+Cached time: 20260118092113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.286 seconds
+CPU time usage: 0.172 seconds
+Real time usage: 0.280 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.693      1 -total
- 45.37%   19.825      1 Template:Std_Base_navi/cs
- 17.86%    7.805      2 Template:Navigation_menu_2
- 13.39%    5.851      1 Template:Userdocnavi/cs
-  8.85%    3.866      1 Template:StdMenu
-  8.43%    3.682      6 Template:VersionPlus
-  7.90%    3.452      2 Template:Docnav
-  7.08%    3.092      1 Template:TOCright
-  5.02%    2.195      8 Template:Version
+100.00%   45.820      1 -total
+ 41.77%   19.137      1 Template:Std_Base_navi/cs
+ 33.37%   15.289      2 Template:Navigation_menu_2
+ 19.26%    8.826      1 Template:Userdocnavi/cs
+  8.47%    3.883      2 Template:Docnav
+  8.26%    3.784      8 Template:Version
+  6.47%    2.964      1 Template:StdMenu
+  5.51%    2.523      6 Template:VersionPlus
+  4.83%    2.211      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118091124 and revision id 1739987. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118092112 and revision id 1739989. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
