--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -54,7 +54,7 @@
 <ul><li><span id="Part_Datums"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Sou&#345;adnice: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CoordinateSystem.svg&amp;filetimestamp=20250110092459&amp;.html" class="mw-file-description"><img src="../File/Part_CoordinateSystem.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CoordinateSystem.html" title="Part CoordinateSystem">Sou&#345;adnicov&yacute; syst&eacute;m</a>: Vytvo&#345;&iacute; objekt sou&#345;adnicov&eacute;ho syst&eacute;mu, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPlane.svg&amp;filetimestamp=20250110092548&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPlane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPlane.html" title="Part DatumPlane">Referen&#269;n&iacute; rovina</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute; roviny, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumLine.svg&amp;filetimestamp=20250110092517&amp;.html" class="mw-file-description"><img src="../File/Part_DatumLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumLine.html" title="Part DatumLine">Datum Line</a>: Creates a datum line object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumLine.svg&amp;filetimestamp=20250110092517&amp;.html" class="mw-file-description"><img src="../File/Part_DatumLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumLine.html" title="Part DatumLine">Referen&#269;n&iacute; linie</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute; linky, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPoint.svg&amp;filetimestamp=20250110092559&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPoint.html" title="Part DatumPoint">Datum Point</a>: Creates a datum point object that can be attached to other objects. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Group.svg&amp;filetimestamp=20240528082502&amp;.html" class="mw-file-description"><img src="../File/Std_Group.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Group.html" title="Std Group">New Group</a>: Creates a new group.</li></ul>
 <ul><li><span id="Std_LinkActions"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Link Actions:</span></li></ul>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118092250
+Cached time: 20260118092532
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.152 seconds
-Real time usage: 0.235 seconds
+CPU time usage: 0.221 seconds
+Real time usage: 0.377 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.720      1 -total
- 45.30%   14.370      1 Template:Std_Base_navi/cs
- 23.00%    7.296      2 Template:Navigation_menu_2
- 20.26%    6.427      1 Template:Userdocnavi/cs
-  8.51%    2.698      2 Template:Docnav
-  7.09%    2.248      6 Template:VersionPlus
-  5.72%    1.815      8 Template:Version
-  5.39%    1.710      1 Template:StdMenu
-  4.14%    1.313      1 Template:TOCright
+100.00%   57.330      1 -total
+ 36.80%   21.098      1 Template:Std_Base_navi/cs
+ 22.33%   12.802      2 Template:Navigation_menu_2
+ 20.32%   11.651      1 Template:Userdocnavi/cs
+ 19.51%   11.187      1 Template:StdMenu
+  6.27%    3.593      1 Template:TOCright
+  5.89%    3.379      2 Template:Docnav
+  5.01%    2.871      6 Template:VersionPlus
+  3.66%    2.096      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118092250 and revision id 1739993. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118092532 and revision id 1739995. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
