Updated page Macro FCSpring Helix Variable/fr

--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -1,11 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FCFeder-Helix-Variable (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCFeder-Helix-Variable (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCSpring_Helix_Variable.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (49% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Molla a spirale variabile (51% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCSpring Zmienna spirala (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -79,7 +78,6 @@ Le fichier .zip <a rel="nofollow" class="external text" href="https://forum.free
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>Cette macro cr&eacute;e un ressort hautement personnalisable. Toute modification modifiant la configuration du ressort peut &ecirc;tre enregistr&eacute;e dans un fichier avec l'extension .FCSpring ou coordonn&eacute;es .FCSpringCoor<br> Sont d&eacute;tect&eacute;es&nbsp;: Surface (Direction de la face), Cylindre (Rayon), Ellipse (MinorRadius), Sph&egrave;re (Rayon), Toro&iuml;de (Rayon1), Plan (direction), ligne (suivre la direction), point (position du sommet XYZ) <br> Si aucun objet n'est d&eacute;tect&eacute; (pas de s&eacute;lection) le ressort est cr&eacute;&eacute; au point XYZ 0., 0., 0.
@@ -514,35 +512,35 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117220500
+Cached time: 20260118093042
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.969 seconds
-Preprocessor visited node count: 949/1000000
+CPU time usage: 0.251 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 948/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28843/5000000 bytes
+Unstrip post&#8208;expand size: 28848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  425.435      1 -total
-  3.19%   13.572      6 Template:Code
-  2.68%   11.396     24 Template:Button
-  2.47%   10.513      2 Template:RadioButton
-  1.82%    7.740      1 Template:Codeextralink
-  1.65%    7.030      1 Template:Macro/fr
-  1.40%    5.946      8 Template:CheckBox
-  1.23%    5.228     12 Template:SpinBox
-  0.94%    4.004      1 Template:KEY
-  0.90%    3.849     14 Template:Clear
+100.00%  152.155      1 -total
+  3.68%    5.603      6 Template:Code
+  3.04%    4.623     12 Template:SpinBox
+  3.01%    4.575      1 Template:Macro/fr
+  2.62%    3.985      8 Template:CheckBox
+  2.38%    3.622      1 Template:Codeextralink
+  2.38%    3.617      2 Template:RadioButton
+  1.69%    2.567     14 Template:Clear
+  1.60%    2.440     24 Template:Button
+  1.59%    2.423      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260117220459 and revision id 1739729. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093042 and revision id 1740007. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
