Updated page Macro FCSpring Helix Variable/fr

--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -79,10 +79,8 @@ Le fichier .zip <a rel="nofollow" class="external text" href="https://forum.free
 </td></tr>
 </tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Cette macro cr&eacute;e un ressort hautement personnalisable. Toute modification modifiant la configuration du ressort peut &ecirc;tre enregistr&eacute;e dans un fichier avec l'extension .FCSpring ou coordonn&eacute;es .FCSpringCoor<br> Sont d&eacute;tect&eacute;es&nbsp;: Surface (Direction de la face), Cylindre (Rayon), Ellipse (MinorRadius), Sph&egrave;re (Rayon), Toro&iuml;de (Rayon1), Plan (direction), ligne (suivre la direction), point (position du sommet XYZ) <br> Si aucun objet n'est d&eacute;tect&eacute; (pas de s&eacute;lection) le ressort est cr&eacute;&eacute; au point XYZ 0., 0., 0.
+<p>Cette macro cr&eacute;e un ressort hautement personnalisable. Toute modification modifiant la configuration du ressort peut &ecirc;tre enregistr&eacute;e dans un fichier avec l'extension .FCSpring ou coordonn&eacute;es .FCSpringCoor<br>Sont d&eacute;tect&eacute;es&nbsp;: Surface (direction de la face), Cylindre (Rayon), Ellipse (MinorRadius), Sph&egrave;re (Rayon), Toro&iuml;de (Rayon1), Plan (Direction), ligne (selon la direction), point (position du sommet XYZ) <br> Si aucun objet n'est d&eacute;tect&eacute; (pas de s&eacute;lection) le ressort est cr&eacute;&eacute; au point XYZ 0., 0., 0.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3a/raw/91cbf54580d8af331f9b371f4951a40b9ef506f3/Macro_FCSpring_Helix_Variable.FCMacro">Macro</a></i>
 </p>
@@ -512,13 +510,13 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093042
+Cached time: 20260118093203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.251 seconds
-Real time usage: 0.366 seconds
-Preprocessor visited node count: 948/1000000
+CPU time usage: 0.247 seconds
+Real time usage: 0.315 seconds
+Preprocessor visited node count: 947/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
@@ -528,19 +526,19 @@ Unstrip post&#8208;expand size: 28848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  152.155      1 -total
-  3.68%    5.603      6 Template:Code
-  3.04%    4.623     12 Template:SpinBox
-  3.01%    4.575      1 Template:Macro/fr
-  2.62%    3.985      8 Template:CheckBox
-  2.38%    3.622      1 Template:Codeextralink
-  2.38%    3.617      2 Template:RadioButton
-  1.69%    2.567     14 Template:Clear
-  1.60%    2.440     24 Template:Button
-  1.59%    2.423      1 Template:KEY
+100.00%  124.388      1 -total
+  4.24%    5.280      1 Template:Macro/fr
+  3.71%    4.614      8 Template:CheckBox
+  3.23%    4.018     12 Template:SpinBox
+  3.10%    3.855      2 Template:RadioButton
+  2.32%    2.891      6 Template:Code
+  2.18%    2.714      1 Template:Codeextralink
+  1.90%    2.364     24 Template:Button
+  1.70%    2.110      1 Template:Caption
+  1.41%    1.759     14 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093042 and revision id 1740007. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093203 and revision id 1740011. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
