Updated page Macro FCSpring Helix Variable/fr

--- a/wiki/fr/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/fr/Macro_FCSpring_Helix_Variable.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCFeder-Helix-Variable (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCSpring_Helix_Variable.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (49% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Molla a spirale variabile (51% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCSpring Zmienna spirala (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -391,13 +391,8 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 </p>
 <h2><span class="mw-headline" id="Versions">Versions</span></h2>
 <p>11/07/2024 version 01.19 delete <b>"import WebGui"</b> replaced by <b>"import webbrowser"</b> and optimise filter for <b>OS Linux Mint</b>
-</p>
-<div class="mw-translate-fuzzy">
-<p>2023/09/01 Version 0.18c adding <b>FreeCAD.activeDocument().recompute(None,True,True)</b><i>Texte en italique</i> "bug" fixed by <b>Syres</b> thanks
-<a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=703568#p703568">How to draw polygonal spirals in Freecad?</a>
-</p>
-</div>
-<p>2023/09/01 Version 0.18b correct (adapt) the code&nbsp;:
+</p><p>2023/09/01 Version 0.18c adding <b>FreeCAD.activeDocument().recompute(None,True,True)</b><i>Text in italics</i> "bug" fixed by <b>Syres</b> thanks <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=703568#p703568">How to draw polygonal spirals in Freecad?</a>
+</p><p>2023/09/01 Version 0.18b correct (adapt) the code&nbsp;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="bp">self</span><span class="o">.</span><span class="n">PB_Adapt_Radius</span><span class="o">.</span><span class="n">setStyleSheet</span><span class="p">(</span><span class="s2">"background-color: QPalette.Base"</span><span class="p">)</span>
 </pre></div>
@@ -500,35 +495,35 @@ Bouton pour votre barre d'outils </p><figure class="mw-default-size mw-halign-le
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093303
+Cached time: 20260118093340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.214 seconds
-Real time usage: 0.281 seconds
-Preprocessor visited node count: 943/1000000
+CPU time usage: 0.211 seconds
+Real time usage: 0.294 seconds
+Preprocessor visited node count: 942/1000000
 Post&#8208;expand include size: 24277/2097152 bytes
 Template argument size: 4651/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28848/5000000 bytes
+Unstrip post&#8208;expand size: 28852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   98.499      1 -total
-  6.43%    6.336      1 Template:Macro/fr
-  3.55%    3.499     12 Template:SpinBox
-  3.50%    3.451      6 Template:Code
-  3.00%    2.959      8 Template:CheckBox
-  2.63%    2.594      2 Template:RadioButton
-  2.51%    2.472      1 Template:Caption
-  2.49%    2.456      1 Template:Codeextralink
-  2.26%    2.226     24 Template:Button
-  1.53%    1.504      1 Template:KEY
+100.00%  118.156      1 -total
+  3.49%    4.122      1 Template:Codeextralink
+  3.23%    3.819      1 Template:Macro/fr
+  3.06%    3.615      6 Template:Code
+  2.97%    3.510     12 Template:SpinBox
+  2.56%    3.030      8 Template:CheckBox
+  2.46%    2.904      2 Template:RadioButton
+  2.21%    2.606     24 Template:Button
+  1.86%    2.195      1 Template:KEY
+  1.64%    1.942      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093303 and revision id 1740021. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:56405-0!canonical and timestamp 20260118093339 and revision id 1740025. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
