Created page with ":* [[File:Std_LinkImport.svg|32px]] [[Std_LinkImport|Importovat odkaz]]: Importuje vybrané externí odkazy."

--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -62,7 +62,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeRelative.svg&amp;filetimestamp=20200618144432&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeRelative.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMakeRelative.html" title="Std LinkMakeRelative">Vytvo&#345;it pododkaz</a>: Vytvo&#345;&iacute; odkaz na podobjekt nebo podprvek.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkReplace.svg&amp;filetimestamp=20200618144452&amp;.html" class="mw-file-description"><img src="../File/Std_LinkReplace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkReplace.html" title="Std LinkReplace">Nahradit za odkaz</a>: Nahrad&iacute; objekt(y) nov&yacute;m odkazem (odkazy).</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkUnlink.svg&amp;filetimestamp=20200618144514&amp;.html" class="mw-file-description"><img src="../File/Std_LinkUnlink.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkUnlink.html" title="Std LinkUnlink">Zru&scaron;it propojen&iacute;</a>: N&aacute;hrad&iacute; odkazy jejich propojen&yacute;mi objekty.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImport.svg&amp;filetimestamp=20200618144354&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImport.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImport.html" title="Std LinkImport">Import Link</a>: Imports selected external link(s).</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImport.svg&amp;filetimestamp=20200618144354&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImport.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImport.html" title="Std LinkImport">Importovat odkaz</a>: Importuje vybran&eacute; extern&iacute; odkazy.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkImportAll.svg&amp;filetimestamp=20200618144411&amp;.html" class="mw-file-description"><img src="../File/Std_LinkImportAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkImportAll.html" title="Std LinkImportAll">Import All Links</a>: Imports all external link(s).</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Std_VarSet.svg&amp;filetimestamp=20240705145906&amp;.html" class="mw-file-description"><img src="../File/Std_VarSet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_VarSet.html" title="Std VarSet">Variable Set</a>: Creates a set of properties that can be used as variables in <a href="../Expressions.html" title="Expressions">expressions</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118093333
+Cached time: 20260118093357
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.203 seconds
-Real time usage: 0.485 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.236 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.158      1 -total
- 50.88%   31.119      1 Template:Std_Base_navi/cs
- 32.60%   19.939      2 Template:Navigation_menu_2
- 17.93%   10.967      1 Template:Userdocnavi/cs
-  7.04%    4.303      2 Template:Docnav
-  5.42%    3.313      6 Template:VersionPlus
-  4.90%    2.994      1 Template:StdMenu
-  4.34%    2.655      1 Template:TOCright
-  4.06%    2.484      8 Template:Version
+100.00%   31.113      1 -total
+ 31.22%    9.713      1 Template:Std_Base_navi/cs
+ 21.47%    6.680      1 Template:Userdocnavi/cs
+ 20.71%    6.442      2 Template:Navigation_menu_2
+  9.77%    3.039      8 Template:Version
+  9.67%    3.009      2 Template:Docnav
+  9.23%    2.873      1 Template:StdMenu
+  6.64%    2.067      1 Template:TOCright
+  6.39%    1.989      6 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093332 and revision id 1740023. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118093357 and revision id 1740027. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
